# FR

./: README.md
Server/: CMakeCache.txt  CMakeLists.txt  Client  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  Server  cmake_install.cmake  full.csv  fullGrimace.csv
Server/models/: fisherModel.xml
Server/src/: ClientSocket.cpp  ImageUtils_0.7.cpp  ServerSocket.cpp  Socket.cpp  detectObject.cpp  preprocessFace.cpp  recognition.cpp  simple_client_main.cpp  simple_server_main.cpp
Server/testData/: CMakeCache.txt  CMakeLists.txt  Divide  Makefile  cmake_install.cmake  divide.cpp  test.csv  train.csv  whole.csv
WebClient/: persons.php  socket.php
final/: index.html  photo.html  style.css  video.html
final/server/: learn.php  model.php  names.php  pass.txt  recognize.php  save.php
upload/: names.csv  train.csv
