cmake_minimum_required(VERSION 2.8)
project( Server )
find_package( OpenCV REQUIRED )
add_library( ServerSocket src/ServerSocket.cpp )
add_library( ClientSocket src/ClientSocket.cpp )
add_library( Socket src/Socket.cpp )
# add_library( ImageUtils src/ImageUtils_0.7.cpp )
add_library( DetectObject src/detectObject.cpp )
add_library( PreprocessFace src/preprocessFace.cpp )
add_library( Recognition src/recognition.cpp)
add_executable( Server src/simple_server_main.cpp )
add_executable( Client src/simple_client_main.cpp )
target_link_libraries( ServerSocket Socket )
target_link_libraries( ClientSocket Socket )
target_link_libraries( Server ServerSocket )
target_link_libraries( Server ${OpenCV_LIBS} )
target_link_libraries( DetectObject ${OpenCV_LIBS} )
# target_link_libraries( ImageUtils ${OpenCV_LIBS} )
target_link_libraries( Server DetectObject )
# target_link_libraries( Server ImageUtils )
target_link_libraries( Server Recognition )
target_link_libraries( Server PreprocessFace )
# target_link_libraries( PreprocessFace ImageUtils )
target_link_libraries( PreprocessFace DetectObject )
target_link_libraries( PreprocessFace ${OpenCV_LIBS} )
target_link_libraries( Client ClientSocket )